<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.evolvlabs.ViewMyEmail.Controllers.GoogleLogInController">
    <ImageView

            android:id="@+id/imageLogo"
            android:padding="16dp"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:gravity="center_horizontal|center"
            app:layout_constraintTop_toBottomOf="@id/warmMessageToUsers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/inGoogleLogInView_EmailEditText"
            android:src="@drawable/vector_art_log_in_screen"
            android:background="@android:color/transparent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="1"
    />
    <EditText
            android:id="@+id/inGoogleLogInView_EmailEditText"
            android:layout_width="0dp"
            android:layout_margin="16dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/inGoogleLogInView_PasswordEditText"
            app:layout_constraintTop_toBottomOf="@id/imageLogo"
    />
    <EditText
            android:id="@+id/inGoogleLogInView_PasswordEditText"
            android:layout_width="0dp"
            android:layout_margin="16dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/prompt_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/butttonPanelForLogIn"
            app:layout_constraintTop_toBottomOf="@+id/inGoogleLogInView_EmailEditText"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="1"/>

    <LinearLayout android:layout_width="match_parent"
                  android:id="@+id/butttonPanelForLogIn"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@id/inGoogleLogInView_PasswordEditText"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:orientation="horizontal"
                  android:layout_marginBottom="32dp"
                  android:layout_marginHorizontal="20dp"
                  android:gravity="center_vertical|center_horizontal|center"
    >
        <Button
                android:id="@+id/inGoogleLogInView_NormalLogInButton"
                android:background="@drawable/custom_background_for_buttons_with_rounded_corners"
                android:textColor="@color/palette_coconutWhite_green_100"
                android:enabled="false"
                android:textAllCaps="false"
                android:fontFamily="@font/inter_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:layout_gravity="fill|fill_vertical|fill_horizontal"
                android:padding="20dp"
                android:text="@string/action_sign_in"/>
        <com.google.android.gms.common.SignInButton
                android:id="@+id/inGoogleLogInView_GoogleSignInButton"
                android:fontFamily="@font/inter_black"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintHorizontal_bias="0"
                android:text="@string/google_sign_in"
                android:layout_gravity="center|center_vertical"
                android:layout_marginStart="20dp"
                android:textColor="@color/palette_coconutWhite_green_100"
                android:enabled="true"/>
    </LinearLayout>
    <TextView
            android:padding="0dp"
            android:textAlignment="viewStart"
            android:gravity="center|start"
            android:background="@drawable/custom_background_less_botom_border_for_headings"
            android:id="@+id/introductoryHeading"
            app:layout_constraintBottom_toTopOf="@id/warmMessageToUsers"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:autoSizeMinTextSize="20sp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintVertical_bias="1"
            android:autoSizeStepGranularity="1sp"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeTextType="uniform"
            android:layout_margin="16dp"
            android:layout_height="0dp"
            android:text="@string/log_in_view_custom_header"
            android:fontFamily="@font/inter_black"
            app:layout_constraintHorizontal_bias="0.375"/>
    <TextView
            android:id="@+id/warmMessageToUsers"
            app:layout_constraintBottom_toTopOf="@id/imageLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/introductoryHeading"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:autoSizeMinTextSize="15sp"
            app:layout_constraintVertical_weight="0.5"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_height="0dp"
            android:text="@string/log_in_form_custom_warm_message"
            android:fontFamily="@font/inter_black"/>


</androidx.constraintlayout.widget.ConstraintLayout>